--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,8 +30,5 @@ jobs:
         continue-on-error: true
       - name: Test with pytest
         run: |
-          coverage run -m pytest  -v -s
-      - name: Generate Coverage Report
-        run: |
-          coverage report -m
+          pytest -v -s
       
