--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,11 +14,6 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
           - "3.10"
-          - "3.11"
-          - "3.12"
-          - "3.13.0-beta.2"
-          - "pypy-3.9"
-          - "pypy-3.10"
 
     name: Test
     runs-on: ${{ matrix.os }}
@@ -37,5 +32,5 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
-          pytest -v -s
+          python -m pytest tests/
       
